Changed to npm module

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,14 @@
 {
     "compilerOptions": {
-        "outDir": "./dist/",
+        "outDir": "./dist",
         "sourceMap": false,
         "noImplicitAny": false,
         "module": "commonjs",
+        "moduleResolution": "node",
         "target": "es6"
     },
     "include": [
-        "src/**/*"
+        "lib/**/*"
     ],
     "exclude": [
         "node_modules",
