--- a/package.json
+++ b/package.json
@@ -1,23 +1,39 @@
 {
-  "name": "kitsu-api",
-  "version": "1.0.0",
+  "name": "kitsu-json-api",
+  "version": "1.0.8",
   "description": "",
-  "main": "index.js",
+  "main": "dist/kitsu-json-api",
+  "typings": "dist/kitsu-json-api",
   "scripts": {
-    "run-server": "ts-node ./src/server.ts"
+    "prepublishOnly": "npm run compile",
+    "compile": "npm run clean && tsc -p .",
+    "watch": "tsc -w -p .",
+    "clean": "del dist"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "bugs": {
+  "url": "http://github.com/yoonjiheun/kitsu-api/issues"
+  },
+  "repository": {
+  "type": "git",
+  "url": "http://github.com/yoonjiheun/kitsu-api.git"
+  },
+  "keywords": ["kitsu", "kitsu-api", "manga", "anime", "kitsu api", "kitsu json api"],
+  "author": "Ji Heun Yoon (John)",
+  "license": "MIT",
   "devDependencies": {
-    "@types/express": "^4.16.0",
+    "@types/request-promise": "^4.1.42",
     "ts-node": "^7.0.0",
     "typescript": "^2.9.2"
   },
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "express": "^4.16.3",
     "request": "^2.87.0",
     "request-promise": "^4.2.2"
-  }
+  },
+  "files": [
+    "dist/kitsu-query-builder.js",
+    "dist/kitsu-query-builder.d.ts",
+    "dist/kitsu-json-api.js",
+    "dist/kitsu-json-api.d.ts",
+    "dist/lib"
+  ]
 }
